# PRDdefinition

./: .gitignore
.github/workflows/: ci.yml  pypi.yml  test_pypi.yml
model/: ExamInformation.yml  _package.yml
python/: pyproject.toml
