[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prd_test_polson"
version = "0.1.2"  # Update as needed
description = "Your package description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }  # Update as needed
dependencies = [
    "numpy>=1.24.3",
    "python>=3.8",
]

[tool.setuptools.packages.find]
where = ["prd"]